hphp/test/slow/using/bad-name.php.expectf
Fatal error: A name or __construct keyword is expected here. in %s/test/slow/using/bad-name.php on line 3
